[package]
name = "playground-happy-eyeballs-async"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-happy-eyeballs-async"
documentation = "https://docs.rs/playground-happy-eyeballs-async"
description = "A quick happy eyeballs example"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures-concurrency = "7.0.0"
futures-time = "3.0.0"

[dev-dependencies]
